# K1_KazAgent

K1_demo_programs/: Incursions_test.py  KazAgentv1_feature_switching.py  autonomous_life.py
K1_test_programs/: ai_interface_test.py  drag_teach_test.py  gamepad_headless_test.py  hid_input_test.py  high_level_motion_test.py  ip_announce_daemon.py  joint_motor_teleop.py  leg_sitdown_test.py  low_level_pub.py  low_level_sub.py  music_dance_test.py  remote_cntrl_behv.py  remote_subscriber.py  threading_test.py
K1_test_programs/res/: ai_chat_persona.txt
KazAgent_behaviors/: Dialogue_behavior.py  KazAgent_Script.py  Music_Dance_behavior.py
booster_agent_framework_release-master/: .gitignore  BOOSTER_AGENT_DEV_GUIDE.md  README.md
booster_agent_framework_release-master/examples/: agent.json
booster_agent_framework_release-master/examples/ros2_main_pkg/: CMakeLists.txt  package.xml
booster_agent_framework_release-master/examples/ros2_main_pkg/include/: examPle_agen.hpp  example_agent.hpp
booster_agent_framework_release-master/examples/ros2_main_pkg/launch/: launch.py
booster_agent_framework_release-master/examples/ros2_main_pkg/src/: example_agent.cpp  mAin.cpp  main.cpp
booster_agent_framework_release-master/node/: CMakeLists.txt  Doxyfile  package.xml
booster_agent_framework_release-master/node/include/: agent_node.hpp  component.hpp  joystick_event.hpp  types.hpp
booster_agent_framework_release-master/node/src/: agent_node.cpp  component.cpp  joystick_event.cpp  types.cpp
booster_agent_framework_release-master/protocol/: CMakeLists.txt  package.xml
booster_agent_framework_release-master/protocol/srv/: AgentJoyService.srv
booster_agent_framework_release-master/scripts/: build_agent.sh  install_agent.sh
sdk_pybind_examples/: sdk_pybind_low_level.py
