<?xml version="1.0"?>
<package format="3">
  <name>booster_agent_framework_protocol</name>
  <version>0.0.1</version>
  <description>Protocol for booster agent manager (C/C++ only)</description>
  <maintainer email="lishuai@boosterobotics.com">lishuai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
